fixing spacing

--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
 .trainername {
   font-size: 1.4em;
   margin: 20% 5px 15px 20px;
-  transition: 1s;
+  /* transition: 1s; */
   float: left;
 }
 
@@ -120,20 +120,21 @@ h1 {
     font-size: 1.15em;
     background: rgba(10, 15, 25, 0.55);
     z-index: 4;
-    border-radius: 5px 25px 5px 25px;
+    border-radius: 0px 25px 25px 0px;
     border-top-right-radius: 25px;
     width: 250px;
     position: relative;
     left: 0;
     top: -40px;
     transition-duration: .5s;
-    box-shadow: 0px 2px 4px black;
-    margin: 0 0 0 6px;
+    box-shadow: 0px 2px 4px blackrgba(0, 0, 0, 0.54);
+    margin: 0;
 }
 
 .statsinfo p {
-  margin: 2px;
-  ;
+  margin: 0px;
+  line-height: 16px;
+  font-size: 1em;
 }
 
 .pokelist {
@@ -567,6 +568,10 @@ modal ends */
 
 #databars {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 6px;
+  grid-template-columns: 1fr;
+  grid-column-gap: 0px;
+}
+
+footer {
+  padding: 20px;
 }
